GET Single bank